# pwd-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/crypto/: aead.hpp  crypto.hpp  kdf.hpp
include/storage/: storage.hpp  vault.hpp
include/utils/: files.hpp  utils.hpp
pwd-manager/: main.cpp
src/: main.cpp
src/crypto/: aead.cpp  kdf.cpp
src/storage/: vault.cpp
src/utils/: files.cpp
